--- a/index.html
+++ b/index.html
@@ -11,26 +11,30 @@
     <body>
         <header>
             <nav class="navLaptop">
-                <a href="#home">Accueil</a>
-                <a href="#resume">Profil</a>
-                <a href="#skills">Compétences</a>
-                <a href="#projects">Projets</a>
-                <a href="mailto:delaunayfredericarthur@gmail.com"><span>Me contacter</span></a>
+                <a class="color-white fontSarala size36" href="#home">Accueil</a>
+                <a class="color-white fontSarala size36" href="#resume">Profil</a>
+                <a class="color-white fontSarala size36" href="#skills">Compétences</a>
+                <a class="color-white fontSarala size36" href="#projects">Projets</a>
+                <a class="color-white fontSarala size36 underlineBlue5" href="mailto:delaunayfredericarthur@gmail.com">Me contacter</a>
             </nav>
             <nav class="navTabletteMobile">
                 <a href="#home"><img src="./img/accueil.png" alt="image de maison" /></a>
                 <a href="#resume"><img src="./img/resume.png" alt="image de profil" /></a>
                 <a href="#skills"><img src="./img/skill.png" alt="image de compétences de profil" /></a>
                 <a href="#projects"><img src="./img/projects.png" alt="image de développement"></a>
-                <a href="mailto:delaunayfredericarthur@gmail.com"><span></span></a>
+                <a href="mailto:delaunayfredericarthur@gmail.com"><img src="./img/email.png" alt="image d'enveloppe"></a>
             </nav>
         </header>
         <main>
-            <section id="home" class="fondBleuGris">
-                <h1>Arthur Delaunay</h1>
-                <h2>Developpeur Web Junior</h2>
-                <h3>Me découvrir</h3>
-                <h3>Projets</h3>
+            <section id="home" class="fondBleuGrisHome paddL170 paddT170">
+                <h1 class="color-blue fontParisienne size164">Arthur Delaunay</h1>
+                <div class="flex flexColumn widthFT">
+                    <h2 class="fontMerienda size64 paddT111 color-white">Developpeur Web Junior</h2>
+                    <div class="paddT90 flex jc-Center gap100">
+                        <a class="fontSarala size44 color-white" href="#resume">Me découvrir</a>
+                        <a class="fontSarala size44 color-white underlineBlue5" href="#projects">Mes projets</a>
+                    </div>
+                </div>    
                 <div class="ellipse1"></div>
                 <div class="ellipse2"></div>
                 <div class="ellipse3"></div>
@@ -40,7 +44,7 @@
             </section>
             <section id="resume" class="fondBleuGris">
                 <h3>Qui suis-je ?</h3>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ratione laudantium omnis, neque nam quod ullam, aperiam sapiente, voluptatum esse temporibus suscipit asperiores veniam alias ut! Fugiat fuga sapiente provident.</p>
             </section>
             <section class="fondBlanc">
 
