--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
             </section>
         </main>
         <footer>
-
+            <ul>
+                <li><a href="https://github.com/ArthurDelaunay" target="_blank"></a><img src="./img/github.png" alt="logo Github"></li>
+                <li><a href="www.linkedin.com/in/arthur-delaunay" target="_blank"></a><img src="./img/linkedin.png" alt="logo LinkedIn"></li>
+            </ul>
         </footer>
     </body>
 </html>
